<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00FFFFFF"
    android:clickable="false"
    tools:context=".RecipeDisplayActivity">


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_RecipeView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/recipe_item_height"
        android:scaleType="centerCrop"
        android:src="@drawable/img_wafflefix"
        app:layout_collapseMode="parallax"
        app:layout_collapseParallaxMultiplier="0.7"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2"
        app:layout_constraintTop_toTopOf="@+id/tb_RecipeName"
        tools:layout_editor_absoluteX="0dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_RecipeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/tv_tempoPreparo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:drawableLeft="@drawable/clock"
                    android:text="@string/tempo" />

                <TextView
                    android:id="@+id/tv_rendimento"
                    android:layout_width="3dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/rend"
                    android:text="@string/rend" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/recipe_title"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_usuarioCriador"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="1dp"
                android:text="@string/dono" />

            <TextView
                android:id="@+id/tv_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:fontFamily="@font/poppins"
                android:text="@string/recipe_description"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingred"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/ingred"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing2"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing3"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing4"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing5"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing6"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_ingrediente7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/poppins"
                android:text="@string/ing7"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <TextView
                android:id="@+id/tv_prep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/prep"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_RecipeView" />

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/light_orange"
                android:fontFamily="@font/poppins"
                android:text="@string/mdp"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHighlight="@color/light_orange"
                android:textColorLink="@color/light_orange"
                android:textCursorDrawable="@color/light_orange"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/light_orange"
                android:fontFamily="@font/poppins"
                android:text="@string/mdp2"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHighlight="@color/light_orange"
                android:textColorLink="@color/light_orange"
                android:textCursorDrawable="@color/light_orange"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/light_orange"
                android:fontFamily="@font/poppins"
                android:text="@string/mdp4"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHighlight="@color/light_orange"
                android:textColorLink="@color/light_orange"
                android:textCursorDrawable="@color/light_orange"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/light_orange"
                android:fontFamily="@font/poppins"
                android:text="@string/mdp5"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHighlight="@color/light_orange"
                android:textColorLink="@color/light_orange"
                android:textCursorDrawable="@color/light_orange"
                android:textSize="14sp" />

            <CheckBox
                android:id="@+id/checkBox8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:buttonTint="@color/light_orange"
                android:fontFamily="@font/poppins"
                android:text="@string/mdp6"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHighlight="@color/light_orange"
                android:textColorLink="@color/light_orange"
                android:textCursorDrawable="@color/light_orange"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>

    <ImageButton
        android:id="@+id/ibtn_favortitar"
        android:layout_width="28dp"
        android:layout_height="29dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="22dp"
        android:background="#00FFFFFF"
        android:scaleX="2"
        android:scaleY="2"
        android:src="@drawable/ic_favoritar"
        app:layout_constraintBottom_toBottomOf="@+id/tb_RecipeName"
        app:layout_constraintEnd_toEndOf="@+id/tb_RecipeName"
        app:layout_constraintTop_toTopOf="@+id/tb_RecipeName" />

</androidx.constraintlayout.widget.ConstraintLayout>