<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SigninActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tmv_logo"
                android:layout_width="match_parent"
                android:layout_height="85dp"
                android:layout_marginTop="64dp"
                android:src="@drawable/name_defaultxxxhdpi" />

            <EditText
                android:id="@+id/et_email_login"
                style="@style/et_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="64dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:drawableEnd="@drawable/ic_email_arroba"
                android:drawableRight="@drawable/ic_email_arroba"
                android:ems="10"
                android:hint="@string/et_email_placeholder"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/et_senha_login"
                style="@style/et_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:drawableEnd="@drawable/ic_senha"
                android:drawableRight="@drawable/ic_senha"
                android:ems="10"
                android:hint="@string/et_senha_placehoder"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btnEntrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/button_gradient_orange"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/tv_entrar"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_esqueceu_senha"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:fontFamily="@font/poppins"
                android:gravity="end"
                android:text="@string/esqueceu_senha"
                android:textColor="@color/common_gray" />

            <TextView
                android:id="@+id/tv_sem_conta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:text="@string/tv_sem_conta"
                android:textColor="@color/common_gray" />

            <TextView
                android:id="@+id/tv_cadastrese"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_semibold"
                android:gravity="center"
                android:text="@string/tv_cadastre"
                android:textColor="@color/common_gray"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>